// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Dropdown.tools.svelte: Icon only 1`] = `
<div>
  <div>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi
nullam vehicula ipsum a arcu cursus. Eget sit amet tellus cras adipiscing
enim eu turpis egestas. Integer malesuada nunc vel risus commodo viverra
maecenas accumsan lacus. Risus viverra adipiscing at in tellus integer
feugiat scelerisque. Ultrices in iaculis nunc sed augue lacus viverra.
Scelerisque in dictum non consectetur a erat nam at lectus. Egestas erat
imperdiet sed euismod nisi porta. Ut faucibus pulvinar elementum integer
enim neque. Proin sed libero enim sed faucibus turpis in eu. A iaculis at
erat pellentesque adipiscing commodo elit at imperdiet.
  </div>
   
  <span
    aria-expanded="false"
    aria-haspopup="menu"
    class="wrapper"
  >
    <button>
      <span
        class="material-icons"
      >
        headset_mic
      </span>
      
      
      
       
      <i
        class="material-icons arrow iconOnly"
      >
        arrow_drop_down
      </i>
      
    </button>
     
    
  </span>
   
  <div>
    Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Tincidunt
vitae semper quis lectus nulla at. Ac felis donec et odio pellentesque
diam volutpat. Lectus sit amet est placerat in egestas erat. Cursus sit
amet dictum sit amet justo donec. Metus aliquam eleifend mi in nulla
posuere sollicitudin aliquam ultrices. Augue neque gravida in fermentum et
sollicitudin ac orci phasellus. Vel quam elementum pulvinar etiam non quam
lacus. Risus commodo viverra maecenas accumsan lacus vel facilisis
volutpat est. Adipiscing vitae proin sagittis nisl rhoncus mattis.
Vulputate eu scelerisque felis imperdiet proin fermentum. Suspendisse
potenti nullam ac tortor vitae. Sem nulla pharetra diam sit amet. Egestas
pretium aenean pharetra magna ac placerat vestibulum lectus. Ut porttitor
leo a diam sollicitudin tempor id. Eget nullam non nisi est. Ullamcorper a
lacus vestibulum sed arcu non odio euismod lacinia.
  </div>
</div>
`;

exports[`Toolshot components/Dropdown.tools.svelte: Left aligned 1`] = `
<div>
  <div>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi
nullam vehicula ipsum a arcu cursus. Eget sit amet tellus cras adipiscing
enim eu turpis egestas. Integer malesuada nunc vel risus commodo viverra
maecenas accumsan lacus. Risus viverra adipiscing at in tellus integer
feugiat scelerisque. Ultrices in iaculis nunc sed augue lacus viverra.
Scelerisque in dictum non consectetur a erat nam at lectus. Egestas erat
imperdiet sed euismod nisi porta. Ut faucibus pulvinar elementum integer
enim neque. Proin sed libero enim sed faucibus turpis in eu. A iaculis at
erat pellentesque adipiscing commodo elit at imperdiet.
  </div>
   
  <span
    aria-expanded="false"
    aria-haspopup="menu"
    class="wrapper"
  >
    <button>
      <span
        class="material-icons"
      >
        emoji_people
      </span>
      
      <span
        class="text"
      >
        Greet
      </span>
      
      
       
      <i
        class="material-icons arrow"
      >
        arrow_drop_down
      </i>
      
    </button>
     
    
  </span>
   
  <div>
    Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Tincidunt
vitae semper quis lectus nulla at. Ac felis donec et odio pellentesque
diam volutpat. Lectus sit amet est placerat in egestas erat. Cursus sit
amet dictum sit amet justo donec. Metus aliquam eleifend mi in nulla
posuere sollicitudin aliquam ultrices. Augue neque gravida in fermentum et
sollicitudin ac orci phasellus. Vel quam elementum pulvinar etiam non quam
lacus. Risus commodo viverra maecenas accumsan lacus vel facilisis
volutpat est. Adipiscing vitae proin sagittis nisl rhoncus mattis.
Vulputate eu scelerisque felis imperdiet proin fermentum. Suspendisse
potenti nullam ac tortor vitae. Sem nulla pharetra diam sit amet. Egestas
pretium aenean pharetra magna ac placerat vestibulum lectus. Ut porttitor
leo a diam sollicitudin tempor id. Eget nullam non nisi est. Ullamcorper a
lacus vestibulum sed arcu non odio euismod lacinia.
  </div>
</div>
`;

exports[`Toolshot components/Dropdown.tools.svelte: Right aligned 1`] = `
<div
  class="text-right"
>
  <div>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi
nullam vehicula ipsum a arcu cursus. Eget sit amet tellus cras adipiscing
enim eu turpis egestas. Integer malesuada nunc vel risus commodo viverra
maecenas accumsan lacus. Risus viverra adipiscing at in tellus integer
feugiat scelerisque. Ultrices in iaculis nunc sed augue lacus viverra.
Scelerisque in dictum non consectetur a erat nam at lectus. Egestas erat
imperdiet sed euismod nisi porta. Ut faucibus pulvinar elementum integer
enim neque. Proin sed libero enim sed faucibus turpis in eu. A iaculis at
erat pellentesque adipiscing commodo elit at imperdiet.
  </div>
   
  <span
    aria-expanded="false"
    aria-haspopup="menu"
    class="wrapper"
  >
    <button>
      <span
        class="material-icons"
      >
        emoji_people
      </span>
      
      <span
        class="text"
      >
        Greet
      </span>
      
      
       
      <i
        class="material-icons arrow"
      >
        arrow_drop_down
      </i>
      
    </button>
     
    
  </span>
   
  <div>
    Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Tincidunt
vitae semper quis lectus nulla at. Ac felis donec et odio pellentesque
diam volutpat. Lectus sit amet est placerat in egestas erat. Cursus sit
amet dictum sit amet justo donec. Metus aliquam eleifend mi in nulla
posuere sollicitudin aliquam ultrices. Augue neque gravida in fermentum et
sollicitudin ac orci phasellus. Vel quam elementum pulvinar etiam non quam
lacus. Risus commodo viverra maecenas accumsan lacus vel facilisis
volutpat est. Adipiscing vitae proin sagittis nisl rhoncus mattis.
Vulputate eu scelerisque felis imperdiet proin fermentum. Suspendisse
potenti nullam ac tortor vitae. Sem nulla pharetra diam sit amet. Egestas
pretium aenean pharetra magna ac placerat vestibulum lectus. Ut porttitor
leo a diam sollicitudin tempor id. Eget nullam non nisi est. Ullamcorper a
lacus vestibulum sed arcu non odio euismod lacinia.
  </div>
</div>
`;

exports[`Toolshot components/Dropdown.tools.svelte: Split clicks 1`] = `
<div>
  <div>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi
nullam vehicula ipsum a arcu cursus. Eget sit amet tellus cras adipiscing
enim eu turpis egestas. Integer malesuada nunc vel risus commodo viverra
maecenas accumsan lacus. Risus viverra adipiscing at in tellus integer
feugiat scelerisque. Ultrices in iaculis nunc sed augue lacus viverra.
Scelerisque in dictum non consectetur a erat nam at lectus. Egestas erat
imperdiet sed euismod nisi porta. Ut faucibus pulvinar elementum integer
enim neque. Proin sed libero enim sed faucibus turpis in eu. A iaculis at
erat pellentesque adipiscing commodo elit at imperdiet.
  </div>
   
  <span
    aria-expanded="false"
    aria-haspopup="menu"
    class="wrapper"
  >
    <button>
      <span
        class="material-icons"
      >
        headset_mic
      </span>
      
      
      
       
      <i
        class="material-icons arrow iconOnly"
      >
        arrow_drop_down
      </i>
      
    </button>
     
    
  </span>
   
  <div>
    Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Tincidunt
vitae semper quis lectus nulla at. Ac felis donec et odio pellentesque
diam volutpat. Lectus sit amet est placerat in egestas erat. Cursus sit
amet dictum sit amet justo donec. Metus aliquam eleifend mi in nulla
posuere sollicitudin aliquam ultrices. Augue neque gravida in fermentum et
sollicitudin ac orci phasellus. Vel quam elementum pulvinar etiam non quam
lacus. Risus commodo viverra maecenas accumsan lacus vel facilisis
volutpat est. Adipiscing vitae proin sagittis nisl rhoncus mattis.
Vulputate eu scelerisque felis imperdiet proin fermentum. Suspendisse
potenti nullam ac tortor vitae. Sem nulla pharetra diam sit amet. Egestas
pretium aenean pharetra magna ac placerat vestibulum lectus. Ut porttitor
leo a diam sollicitudin tempor id. Eget nullam non nisi est. Ullamcorper a
lacus vestibulum sed arcu non odio euismod lacinia.
  </div>
</div>
`;

exports[`Toolshot components/Dropdown.tools.svelte: Value as text 1`] = `
<div>
  <div>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi
nullam vehicula ipsum a arcu cursus. Eget sit amet tellus cras adipiscing
enim eu turpis egestas. Integer malesuada nunc vel risus commodo viverra
maecenas accumsan lacus. Risus viverra adipiscing at in tellus integer
feugiat scelerisque. Ultrices in iaculis nunc sed augue lacus viverra.
Scelerisque in dictum non consectetur a erat nam at lectus. Egestas erat
imperdiet sed euismod nisi porta. Ut faucibus pulvinar elementum integer
enim neque. Proin sed libero enim sed faucibus turpis in eu. A iaculis at
erat pellentesque adipiscing commodo elit at imperdiet.
  </div>
   
  <span
    aria-expanded="false"
    aria-haspopup="menu"
    class="wrapper"
  >
    <button>
      <span
        class="material-icons"
      >
        headset_mic
      </span>
      
      <span
        class="text"
      >
        player
      </span>
      
      
       
      <i
        class="material-icons arrow"
      >
        arrow_drop_down
      </i>
      
    </button>
     
    
  </span>
   
  <div>
    Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Tincidunt
vitae semper quis lectus nulla at. Ac felis donec et odio pellentesque
diam volutpat. Lectus sit amet est placerat in egestas erat. Cursus sit
amet dictum sit amet justo donec. Metus aliquam eleifend mi in nulla
posuere sollicitudin aliquam ultrices. Augue neque gravida in fermentum et
sollicitudin ac orci phasellus. Vel quam elementum pulvinar etiam non quam
lacus. Risus commodo viverra maecenas accumsan lacus vel facilisis
volutpat est. Adipiscing vitae proin sagittis nisl rhoncus mattis.
Vulputate eu scelerisque felis imperdiet proin fermentum. Suspendisse
potenti nullam ac tortor vitae. Sem nulla pharetra diam sit amet. Egestas
pretium aenean pharetra magna ac placerat vestibulum lectus. Ut porttitor
leo a diam sollicitudin tempor id. Eget nullam non nisi est. Ullamcorper a
lacus vestibulum sed arcu non odio euismod lacinia.
  </div>
</div>
`;
